Changes
-------

Version number is in EtherNetIP.version

* 1.2 - 2017/05/25
Fix: Support reading and writing STRING tags (#12)

* 1.1 - 2016/12/15
Fix: Handle path tags like "array[2].element" (#8)

* 1.0 - 2014/02/20
Fix: Missing 'pad' for bool data. Demo of scan list read/write.